# zksybil

./: .env.example  .gitignore  README.md  package-lock.json  package.json  run_verifications.sh
artifacts/fixture/: expected_public_inputs  metadata.json  proof-js  proof-keccak  sybil.json  vk-js
artifacts/fixture/proof/: proof
artifacts/fixture/vk/: vk
circuits/sybil/: Nargo.toml  Prover.toml
circuits/sybil/src/: main.nr
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/appgate/: Cargo.toml
contracts/appgate/src/: lib.rs  test.rs
contracts/appgate/test_snapshots/test/: test_admin_only_open_scope.1.json  test_claim_stale_root.1.json  test_claim_success.1.json  test_double_claim_fails.1.json
contracts/appgate/tests/: real_verifier.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  test.rs
contracts/registry/test_snapshots/test/: test_issuer_adds_identity.1.json  test_unauthorized_update.1.json  test_update_root.1.json
evidence/: testnet-latest.json
scripts/: deploy-testnet.sh  generate-proof-inputs.ts  prove-fixture.sh  prove-fixture.ts  testnet-e2e.sh  verify-public-input-mutations.sh
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  Workflow.jsx  main.jsx  styles.css
web/src/lib/: identity.js  prover.js  prover.test.js  workflow.js  workflow.test.js
