[workspace]
members = [
    "registry",
    "appgate"
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[workspace.dependencies]
soroban-sdk = { version = "26.1.0", default-features = false, features = ["alloc"] }